Rename portfolio-one to index, updated links  and cleaned up the rest of the files

--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8"
-    <meta name="viewport" content="width=device-with, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/style.css">
-    <title>Portfolio</title>
+        <meta charset="UTF-8"
+        <meta name="viewport" content="width=device-with, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
+        <title>Portfolio One</title>
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="portfolio one.html">Portfolio One</a></li>
-            <li><a href="portfolio two.html">Portfolio Two</a></li>
-            <li><a href="portfolio three.html">Portfolio Three</a></li>
-            <li><a href="forbidden.html">Heresy</a></li>
-        </ul>
-    </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html">Portfolio One</a></li>
+                <li><a href="portfolio-two.html">Portfolio Two</a></li>
+                <li><a href="portfolio-three.html">Portfolio Three</a></li>
+                <li><a href="portfolio-forbidden.html">Heresy</a></li>
+            </ul>
+        </nav>
     <h1>Portfolio One</h1>
     <div class="card">
         <a href="https://wikipedia.org/wiki/HTML5" target="_blank">
