--- a/portfolio-three.html
+++ b/portfolio-three.html
@@ -3,12 +3,12 @@
         <meta charset="UTF-8"
         <meta name="viewport" content="width=device-with, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
-        <title>Heresy detected!</title>
+        <title>Portfolio One</title>
 </head>
 <body>
         <nav>
             <ul>
-                <li><a href="portfolio-one.html">Portfolio One</a></li>
+                <li><a href="index.html">Portfolio One</a></li>
                 <li><a href="portfolio-two.html">Portfolio Two</a></li>
                 <li><a href="portfolio-three.html">Portfolio Three</a></li>
                 <li><a href="portfolio-forbidden.html">Heresy</a></li>
