Fixed Typo in portfolio-forbidden.html and added inline style

--- a/portfolio-forbidden.html
+++ b/portfolio-forbidden.html
@@ -14,9 +14,11 @@
             <li><a href="portfolio-forbidden.html">Heresy</a></li>
         </ul>
     </nav>
+    <div style="text-align: center;">
     <h1>Heresy</h1>
-    <p>If you have seen these symbols in you neighborhood, please contact your local Inqusition for Exterminatus by clicking on the link.</p>
+    <p>If you have seen these symbols in you neighborhood, please contact your local Inquisition for Exterminatus by clicking on the link.</p>
     <p>Don't worry about it, it's fine.</p>
+    </div>
     <div class="card">
         <a href="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Ffc09.deviantart.net%2Ffs71%2Ff%2F2011%2F066%2F3%2F6%2Fexterminatus_motive_pic_by_fkfkk-d3b5aga.jpg&f=1&nofb=1" target="_blank">
             <img src="https://static.wikia.nocookie.net/warhammer40k/images/1/17/MarkofKhorneBig.png" alt="Blood for the Blood God! Skulls for the Skull Throne!">
