--- a/portfolio-two.html
+++ b/portfolio-two.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-        <meta charset="UTF-8"
+        <meta charset="UTF-8">
         <meta name="viewport" content="width=device-with, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
         <title>Portfolio One</title>
