--- a/portfolio-three.html
+++ b/portfolio-three.html
@@ -1,5 +1,5 @@
-<html lang="en">
-<head>
+<html>
+<head lang="en">
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-with, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
