--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
-<head lang="en">
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-with, initial-scale=1.0">
         <link rel="stylesheet" href="css/style.css">
